--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDevicesView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDevicesView.xaml
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <pge:LagoVistaContentPage    xmlns="http://xamarin.com/schemas/2014/forms"
-               xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
+                xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.MyDevicesView">
+                xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core" 
+                x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.MyDevicesView">
     <pge:LagoVistaContentPage.MainContent>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <ListView ItemsSource="{Binding DiscoveredDevices}" SelectedItem="{Binding SelecctedDevice, Mode=TwoWay}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ctls:NavigationViewCell Icon="fa-microchip" Text="{Binding DeviceName}" Detail="{Binding DeviceAddress}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </pge:LagoVistaContentPage.MainContent>
-    </pge:LagoVistaContentPage>
+</pge:LagoVistaContentPage>
