--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/PairHardwareView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/PairHardwareView.xaml
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <pge:LagoVistaContentPage    xmlns="http://xamarin.com/schemas/2014/forms"
-               xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
+                xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.PairHardwareView ">
+                xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core" 
+                x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.PairHardwareView ">
     <pge:LagoVistaContentPage.MainContent>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ListView ItemsSource="{Binding DiscoveredDevices}" SelectedItem="{Binding SelecctedDevice, Mode=TwoWay}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ctls:NavigationViewCell Icon="fa-microchip" Text="{Binding DeviceName}" Detail="{Binding DeviceAddress}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </pge:LagoVistaContentPage.MainContent>
-    </pge:LagoVistaContentPage>
+</pge:LagoVistaContentPage>
