--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDevicesView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDevicesView.xaml
@@ -2,17 +2,31 @@
 <pge:LagoVistaContentPage    xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:trs="clr-namespace:LagoVista.XPlat.Core.Extensions;assembly=LagoVista.XPlat.Core"
                 xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core" 
                 x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.MyDevicesView">
     <pge:LagoVistaContentPage.MainContent>
-        <StackLayout>
-            <ListView ItemsSource="{Binding DiscoveredDevices}" SelectedItem="{Binding SelecctedDevice, Mode=TwoWay}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <pge:Entry FontSize="Medium" Margin="10" TextChangedCommand="{Binding SearchNowCommand}" Placeholder="{trs:ClientTranslate DevicesView_SearchWatermark}" TextClearedCommand="{Binding FilterClearedCommand}" />
+
+            <StackLayout IsVisible="{Binding IsListEmpty}" Margin="20,50,20,0" Grid.Row="1" >
+                <Label Text="{trs:ClientTranslate DevicesView_NoDevice}" FontSize="Large"  />
+            </StackLayout>
+
+            <ListView ItemsSource="{Binding ListItems}" HasUnevenRows="True" SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                       IsVisible="{Binding ListHasData}" Grid.Row="1" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ctls:NavigationViewCell Icon="fa-microchip" Text="{Binding DeviceName}" Detail="{Binding DeviceAddress}" />
+                        <ctls:NavigationViewCell Icon="fa-microchip" Text="{Binding DeviceName}" Detail="{Binding DeviceId}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-        </StackLayout>
+
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
