--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDevicesView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDevicesView.xaml
@@ -4,6 +4,8 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:trs="clr-namespace:LagoVista.XPlat.Core.Extensions;assembly=LagoVista.XPlat.Core"
                 xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core" 
+                RightMenu="Add"
+                LeftMenu="Back"
                 x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.MyDevicesView">
     <pge:LagoVistaContentPage.MainContent>
         <Grid>
