--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDeviceMenuView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDeviceMenuView.xaml
@@ -6,13 +6,89 @@
                LeftMenu="Back"
                x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.MyDeviceMenuView">
     <pge:LagoVistaContentPage.MainContent>
-        <ListView ItemsSource="{Binding MenuOptions}" HasUnevenRows="true" SelectedItem="{Binding SelectedMenuOption}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ctls:NavigationViewCell Command="{Binding Command}" Text="{Binding Name}" 
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid Margin="0,25,0,0" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}"
+                        RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}"
+                        >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <pge:Icon Grid.Column="0" 
+                              IconKey="fa-map-marker" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36" 
+                              Margin="0,20,0,0"
+                              HorizontalTextAlignment="Center" />
+                <pge:Icon Grid.Column="1"
+                              IconKey="fa-thermometer-half" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36" 
+                              Margin="0,20,0,0"
+                              HorizontalTextAlignment="Center" />
+                <pge:Icon Grid.Column="2" 
+                              IconKey="fa-battery-half" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36" 
+                              Margin="0,20,0,0"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="3" 
+                              IconKey="fa-bluetooth" 
+                              TextColor="DarkGray"
+                              FontSize="36"
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsBLEDisconnected}"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="3" 
+                              IconKey="fa-bluetooth" 
+                              FontSize="36"
+                              TextColor="{Binding HeaderForegroundColor}"
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsBLEConnected}"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="4" 
+                              IconKey="fa-wifi" 
+                              FontSize="36"
+                              TextColor="DarkGray"                              
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsDeviceDisconnectedToServer}"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="4" 
+                              IconKey="fa-wifi" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36"
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsDeviceConnectedToServer}"
+                              HorizontalTextAlignment="Center" />
+
+                <Label Grid.Row="1" Grid.ColumnSpan="5" Text="{Binding SystemStatus}" TextColor="{Binding HeaderForegroundColor}"
+                           HorizontalTextAlignment="Center" />
+            </Grid>
+
+            <ListView ItemsSource="{Binding MenuOptions}" HasUnevenRows="true" SelectedItem="{Binding SelectedMenuOption}" Grid.Row="1">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ctls:NavigationViewCell Command="{Binding Command}" Text="{Binding Name}" 
                                              Detail="{Binding Help}" Icon="{Binding FontIconKey}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
