--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/SensorDetailView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/SensorDetailView.xaml
@@ -4,10 +4,83 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.SensorDetailView">
     <pge:LagoVistaContentPage.MainContent>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid Margin="0,25,0,0" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}"
+                        RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}"
+                        >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.20*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <pge:Icon Grid.Column="0" 
+                              IconKey="fa-map-marker" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36" 
+                              Margin="0,20,0,0"
+                              HorizontalTextAlignment="Center" />
+                <pge:Icon Grid.Column="1"
+                              IconKey="fa-thermometer-half" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36" 
+                              Margin="0,20,0,0"
+                              HorizontalTextAlignment="Center" />
+                <pge:Icon Grid.Column="2" 
+                              IconKey="fa-battery-half" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36" 
+                              Margin="0,20,0,0"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="3" 
+                              IconKey="fa-bluetooth" 
+                              TextColor="DarkGray"
+                              FontSize="36"
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsBLEDisconnected}"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="3" 
+                              IconKey="fa-bluetooth" 
+                              FontSize="36"
+                              TextColor="{Binding HeaderForegroundColor}"
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsBLEConnected}"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="4" 
+                              IconKey="fa-wifi" 
+                              FontSize="36"
+                              TextColor="DarkGray"                              
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsDeviceDisconnectedToServer}"
+                              HorizontalTextAlignment="Center" />
+
+                <pge:Icon Grid.Column="4" 
+                              IconKey="fa-wifi" 
+                              TextColor="{Binding HeaderForegroundColor}"
+                              FontSize="36"
+                              Margin="0,20,0,0"
+                              IsVisible="{Binding IsDeviceConnectedToServer}"
+                              HorizontalTextAlignment="Center" />
+
+                <Label Grid.Row="1" Grid.ColumnSpan="5" Text="{Binding SystemStatus}" TextColor="{Binding HeaderForegroundColor}"
+                           HorizontalTextAlignment="Center" />
+            </Grid>
+            
+            <Button Text="Read" Grid.Row="1" Command="{Binding ReadCommand}" />
+            <Button Text="Write" Grid.Row="2" Command="{Binding WriteCommand}" />
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
-    </pge:LagoVistaContentPage>
+</pge:LagoVistaContentPage>
