--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/SensorLibraryView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/SensorLibraryView.xaml
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pge:LagoVistaContentPage    xmlns="http://xamarin.com/schemas/2014/forms"
-               xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
-                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.SensorLibraryView">
+<pge:LagoVistaContentPage    
+            xmlns="http://xamarin.com/schemas/2014/forms"
+            xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            Title="Sensor Library"
+            LeftMenu="Cancel"
+            x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.SensorLibraryView">
     <pge:LagoVistaContentPage.MainContent>
-        <ListView ItemsSource="{Binding SensorTypes}" SelectedItem="{Binding SelectedSensor, Mode=TwoWay}">
+        <ListView ItemsSource="{Binding SensorTypes}" SelectedItem="{Binding SelectedSensor, Mode=TwoWay}" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    
                     <TextCell  Text="{Binding Name}" />
-                    
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
