--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDeviceMenuView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/MyDeviceMenuView.xaml
@@ -4,13 +4,13 @@
                xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core"
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                LeftMenu="Back"
+               Title="Manage my Brain"
                x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.MyDeviceMenuView">
     <pge:LagoVistaContentPage.MainContent>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid Margin="0,25,0,0" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}"
                         RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}"
