--- a/src/LagoVista.XPlat.Core/Views/DeviceSetup/PairHardwareView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceSetup/PairHardwareView.xaml
@@ -3,12 +3,27 @@
                 xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core" 
+                Title="Find Brain"
+                LeftMenu="Back"
                 x:Class="LagoVista.XPlat.Core.Views.DeviceSetup.PairHardwareView ">
     <pge:LagoVistaContentPage.MainContent>
-        <ListView ItemsSource="{Binding DiscoveredDevices}" SelectedItem="{Binding SelecctedDevice, Mode=TwoWay}">
+        <ListView ItemsSource="{Binding DiscoveredDevices}" SelectedItem="{Binding SelectedDevice}" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <ctls:NavigationViewCell Icon="fa-microchip" Text="{Binding DeviceName}" Detail="{Binding DeviceAddress}" />
+                    <ViewCell>
+                        <Grid Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="66*" />
+                                <RowDefinition Height="33*" />
+                            </Grid.RowDefinitions>
+                            <Label Text="{Binding DeviceName}" Grid.Column="1" FontSize="Large" />
+                            <Label Text="{Binding DeviceAddress}" Grid.Column="1" Grid.Row="1" />
+                        </Grid>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
