--- a/Apps/NuvIoT.HardwareClient/MainWindow.xaml
+++ b/Apps/NuvIoT.HardwareClient/MainWindow.xaml
@@ -34,9 +34,9 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Button Content="Start Watcher" x:Name="btnBLEStartWatcher" Click="btnBLEStartWatcher_Click" Width="120" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,160,0"/>
-        <Button Content="Disconnect" x:Name="btnBLEDisconnect" Click="btnBLEDisconnect_Click" Width="80" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,80,0"/>
-        <Rectangle Width="80" Height="20" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Fill="Red" x:Name="rectBTConnected"/>
+        <Button Content="Start Watcher" x:Name="btnBLEStartWatcher" Click="btnBLEStartWatcher_Click" Width="120" Grid.Column="1" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,160,0"/>
+        <Button Content="Disconnect" x:Name="btnBLEDisconnect" Click="btnBLEDisconnect_Click" Width="80" Grid.Column="1" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,80,0"/>
+        <Rectangle Width="80" Height="20" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Fill="Red" x:Name="rectBTConnected"/>
 
         <TabControl Grid.Column="1" Grid.Row="1">
             <TabItem Header="Console" >
@@ -47,6 +47,28 @@
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
+            </TabItem>
+            <TabItem Header="Configurations">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <Label>Command</Label>
+                        <TextBox AcceptsReturn="false" Margin="2" Text="{Binding CommandText, Mode=TwoWay}" x:Name="txtIOConfigCommandType" KeyUp="txtIOConfigCommandType_KeyUp" />
+                    </StackPanel>
+                        <ListBox ItemsSource="{Binding ConfigResponses}" Grid.Column="1"  x:Name="ConfigOutputList" Background="Black" Margin="0,20,0,0">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding .}" Foreground="Yellow" FontFamily="Consolas"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Grid>
             </TabItem>
         </TabControl>
         <StackPanel Grid.Column="2" Grid.Row="1">
@@ -60,7 +82,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
-            <TextBox AcceptsReturn="false" Margin="2" Text="{Binding CommandText, Mode=TwoWay}" x:Name="txtCommandText" KeyDown="txtCommandText_KeyDown" />
+            <TextBox AcceptsReturn="false" Margin="2" Text="{Binding CommandText, Mode=TwoWay}" x:Name="txtCommandText" KeyUp="txtCommandText_KeyDown"  />
             <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="2" >
                 <Button x:Name="Send" Content="Send" Width="80" Height="24" ></Button>
                 <CheckBox x:Name="chkSendCR" Content="Send CR" VerticalAlignment="Center" Margin="10,0,10,0" IsChecked="{Binding SendCR}" />
